# universal-focus-remote

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: addboarddialog.cpp  addboarddialog.h  addboarddialog.ui  boardselector.cpp  boardselector.h  boardselector.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/actions/: qbooleanaction.cpp  qbooleanaction.h
src/boards/etc/eos/: eossettings.cpp  eossettings.h  etceos.cpp  etceos.h
src/boards/etc/eos/datatypes/: eoschannel.cpp  eoschannel.h
src/boards/etc/eos/ui/: eosform.cpp  eosform.h  eosform.ui  eoskeypadform.cpp  eoskeypadform.h  eoskeypadform.ui  eospatchform.cpp  eospatchform.h  eospatchform.ui  eossyntaxhighlighter.cpp  eossyntaxhighlighter.h
src/boards/etc/eos/ui/keypad/: eoskeypadform.h
src/boards/etc/eos/ui/patch/: eospatchform.cpp  eospatchform.h  eospatchform.ui  qpatchdatamodel.cpp  qpatchdatamodel.h
src/style/: style.qrc  style.qss
src/widgets/: qdualeventbutton.cpp  qdualeventbutton.h  qsquarepushbutton.cpp  qsquarepushbutton.h
src/widgets/tabs/: qboardtabarea.cpp  qboardtabarea.h  qnewtabdialog.cpp  qnewtabdialog.h  qnewtabdialog.ui
